--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,42 @@
+:root {
+  --ease: ease-in-out;
+  --ease-in-quad: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+  --ease-in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  --ease-in-quart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
+  --ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  --ease-in-expo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  --ease-in-circ: cubic-bezier(0.6, 0.04, 0.98, 0.335);
+  --ease-in-back: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  --ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  --ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
+  --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
+  --ease-out-quint: cubic-bezier(0.23, 1, 0.32, 1);
+  --ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+  --ease-out-circ: cubic-bezier(0.075, 0.82, 0.165, 1);
+  --ease-out-back: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  --ease-in-out-quad: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  --ease-in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
+  --ease-in-out-quart: cubic-bezier(0.77, 0, 0.175, 1);
+  --ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
+  --ease-in-out-expo: cubic-bezier(1, 0, 0, 1);
+  --ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  --ease-in-out-back: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+@font-face {
+  font-family: 'ApfelGrotezk-Bold';
+  src: url('./fonts/ApfelGrotezk-Fett.woff') format('woff');
+  font-display: swap;
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: 'ApfelGrotezk-Regular';
+  src: url('./fonts/ApfelGrotezk-Regular.woff') format('woff');
+  font-display: swap;
+  font-weight: 400;
+}
+
 *,
 *:before,
 *:after {
@@ -12,6 +51,31 @@ body,
 canvas {
   height: 100%;
   width: 100%;
+}
+
+body {
+  font-family: 'ApfelGrotezk-Regular';
+  font-weight: 400;
+}
+
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  z-index: 100;
+  font-size: 1.5rem;
+}
+
+.loader[data-show='false'] {
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+  pointer-events: none;
 }
 
 .ui {
@@ -32,4 +96,30 @@ canvas {
 button:not(:disabled) {
   pointer-events: auto;
   cursor: pointer;
+}
+
+.player-mark {
+  font-family: 'ApfelGrotezk-Bold';
+  font-weight: 900;
+  font-size: 1.2rem;
+  color: #e8e8e8;
+  text-shadow: 0 0 10px #ffffff91;
+  transform-style: preserve-3d;
+  user-select: none;
+}
+
+.player-mark[data-state='success'] {
+  animation: glow 2s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 5px #fff;
+  }
+
+  to {
+    text-shadow:
+      0 0 5px #fff,
+      0 0 10px #fff;
+  }
 }
