Revert "fix: fallback font"
This reverts commit 311a28392818ffda6daa840bc42cad5954e57a68.

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Sniglet', sans-serif;
+  font-family: 'Sniglet';
   src: url('./fonts/Sniglet-webfont.woff') format('woff');
   font-display: swap;
 }
@@ -39,8 +39,7 @@ body {
 }
 
 .loader {
-  font-family: 'Sniglet', sans-serif;
-  font-weight: 900;
+  font-family: 'Sniglet';
   position: fixed;
   z-index: 100;
   width: 100%;
@@ -84,7 +83,7 @@ body[data-is-ready='true'] .loader {
 }
 
 .ui h1 {
-  font-family: 'Sniglet', sans-serif;
+  font-family: 'Sniglet';
   font-weight: 900;
   font-size: 3rem;
   letter-spacing: -0.025em;
@@ -127,7 +126,7 @@ button:not(:disabled) {
 }
 
 .btn {
-  font-family: 'Sniglet', sans-serif;
+  font-family: 'Sniglet';
   font-size: 1.5rem;
   color: var(--color-secondary);
   background-color: var(--color-primary);
@@ -151,7 +150,7 @@ button:not(:disabled) {
 }
 
 .player-mark {
-  font-family: 'Sniglet', sans-serif;
+  font-family: 'Sniglet';
   font-weight: 900;
   font-size: 1.5rem;
   color: var(--color-secondary);
